--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 *.h linguist-language=java
 *.m linguist-language=java
+* text=java
+*.js linguist-language=java
+*.css linguist-language=java
+*.html linguist-language=java
+*.md linguist-language=java
